--- a/readme
+++ b/readme
@@ -17,4 +17,4 @@ show the users the meals with an option to add them to the cart via a button
 STEP TWO 
 initalize a object which cotains the data we need to send to the backend matching the properites
     - on click on a specific button acrding to the click create a new property in the object with the data that has been clicked 
-    - make sure to
+    - make sure to, once the data about which button was clicked is recieved we update the array using that data
