done this thing is working now

--- a/readme
+++ b/readme
@@ -42,4 +42,11 @@ on the click of the button the screen in front disappears instead a input field 
         - on click of this button the object we have here in our case "orderData" will be sent to the backend -- and we will recieve it
     - button to make the dialog disappear
 
+STEP 5
+make this app look pretty : not a proiority rn
+make this app more interactable: not a priority rn
+...Goal is to just get it to work: it is working --
+
+GOAL ACIENVED
+
 REACT FORMS
