--- a/readme
+++ b/readme
@@ -50,3 +50,4 @@ make this app more interactable: not a priority rn
 GOAL ACIENVED
 
 
+--THIS SHIT WON'T RUN VIA A URL HAVE TO HOST THE BACKEND AS WELL WILL FIGURE OUT HOW TO DO THAT LATER--
